--- a/src/WPF_Editor/Views/Editor.xaml
+++ b/src/WPF_Editor/Views/Editor.xaml
@@ -78,14 +78,26 @@
                     </WrapPanel>
                 </StackPanel>
             </Border>
-            <Border
-                BorderBrush="Black"
-                BorderThickness="1"
-                DockPanel.Dock="Bottom">
-                <StackPanel
-                    Name="Console"
-                    Height="100"
-                    Background="DarkGray" />
+            <Border BorderBrush="Black" BorderThickness="1" DockPanel.Dock="Bottom" Margin="5" >
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition></RowDefinition>
+                        <RowDefinition></RowDefinition>
+                    </Grid.RowDefinitions>
+                    <Button Grid.Row="0" Height="15" Width="23" HorizontalAlignment="Right" Content=""></Button>
+                    <TabControl Grid.Row="1" Height="150" TabStripPlacement="Bottom" Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConvertor}}">
+                        <TabItem Header="Messages">
+                            <ScrollViewer>
+                                <TextBox TextWrapping="Wrap" IsReadOnly="True" Text="{Binding MessageConsole, Mode=OneWay}"></TextBox>
+                            </ScrollViewer>
+                        </TabItem>
+                        <TabItem Header="Errors">
+                            <ScrollViewer>
+                                <TextBox TextWrapping="Wrap" IsReadOnly="True" Text="{Binding ErrorConsole, Mode=OneWay}"></TextBox>
+                            </ScrollViewer>
+                        </TabItem>
+                    </TabControl>
+                </Grid>
             </Border>
             <Border
                 BorderBrush="Black"
