--- a/src/WPF_Editor/Views/Editor.xaml
+++ b/src/WPF_Editor/Views/Editor.xaml
@@ -13,7 +13,7 @@
     WindowState="Maximized"
     mc:Ignorable="d">
     <Window.Resources>
-        <convertor:BoolToConsoleVisibiltyConvertor x:Key="BoolToConsoleConvertor" />
+        <convertor:BoolToConsoleVisibiltyConverter x:Key="BoolToConsoleConverter" />
     </Window.Resources>
     <Grid>
         <DockPanel>
@@ -85,7 +85,7 @@
                         <RowDefinition></RowDefinition>
                     </Grid.RowDefinitions>
                     <Button Grid.Row="0" Height="15" Width="23" HorizontalAlignment="Right" Content="" VerticalAlignment="Top" Click="OnShowOrMinimizeConsoleButtonClick"></Button>
-                    <TabControl Grid.Row="1" Height="150" TabStripPlacement="Bottom" Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConvertor}}">
+                    <TabControl Grid.Row="1" Height="150" TabStripPlacement="Bottom" Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConverter}}">
                         <TabItem Header="Messages">
                             <ScrollViewer>
                                 <TextBox TextWrapping="Wrap" IsReadOnly="True" Text="{Binding MessageConsole, Mode=OneWay}"></TextBox>
