Added simple handler for click on scene.

--- a/src/WPF_Editor/Views/Editor.xaml
+++ b/src/WPF_Editor/Views/Editor.xaml
@@ -88,8 +88,18 @@
                         <RowDefinition />
                         <RowDefinition />
                     </Grid.RowDefinitions>
-                    <Button Grid.Row="0" Height="15" Width="23" HorizontalAlignment="Right" Content="" VerticalAlignment="Top" Click="OnShowOrMinimizeConsoleButtonClick"></Button>
-                    <TabControl Grid.Row="1" Height="150" TabStripPlacement="Bottom" Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConverter}}">
+                    <Button
+                        Grid.Row="0"
+                        Width="23"
+                        Height="15"
+                        HorizontalAlignment="Right"
+                        VerticalAlignment="Top"
+                        Content="" />
+                    <TabControl
+                        Grid.Row="1"
+                        Height="150"
+                        TabStripPlacement="Bottom"
+                        Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConverter}}">
                         <TabItem Header="Messages">
                             <ScrollViewer>
                                 <TextBox
@@ -165,7 +175,7 @@
             <Grid
                 Name="Scene"
                 Background="White"
-                MouseLeftButtonDown="Scene_MouseLeftButtonDown"/>
+                MouseLeftButtonDown="Scene_MouseLeftButtonDown" />
         </DockPanel>
     </Grid>
 </Window>
