--- a/src/WPF_Editor/Views/Editor.xaml
+++ b/src/WPF_Editor/Views/Editor.xaml
@@ -3,10 +3,14 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
+    xmlns:controls="clr-namespace:WPF_Editor.Views"
     xmlns:converters="clr-namespace:WPF_Editor.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:graphx="http://schemas.panthernet.ru/graphx/"
+    xmlns:graphxctrl="clr-namespace:GraphX.Controls;assembly=GraphX.WPF.Controls"
     xmlns:local="clr-namespace:WPF_Editor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:views="clr-namespace:WPF_Editor.Views"
     Title="MainWindow"
     Width="1280"
     Height="720"
@@ -22,60 +26,8 @@
                 BorderThickness="1"
                 DockPanel.Dock="Top">
                 <StackPanel Name="TopPanel" Height="70">
-                    <ToolBar
-                        Name="ToolBar"
-                        Background="White"
-                        BorderBrush="Black"
-                        BorderThickness="1">
-
-                        <Menu Background="White">
-                            <MenuItem Header="File">
-                                <MenuItem Header="New" />
-                                <MenuItem Header="Open" />
-                                <MenuItem Header="Save" />
-                                <MenuItem Header="Save as..." />
-                                <Separator />
-                                <MenuItem Header="Exit" />
-                            </MenuItem>
-                            <MenuItem Header="Edit">
-                                <MenuItem Header="Undo" />
-                                <MenuItem Header="Redo" />
-                                <Separator />
-                                <MenuItem Header="Cut" />
-                                <MenuItem Header="Copy" />
-                                <MenuItem Header="Paste" />
-                            </MenuItem>
-                            <MenuItem Header="Settings">
-                                <MenuItem Header="Some setting 1" />
-                                <MenuItem Header="Some setting 2" />
-                                <Separator />
-                                <MenuItem Header="Another setting 1" />
-                                <MenuItem Header="Another setting 2" />
-                            </MenuItem>
-                            <MenuItem Header="Help">
-                                <MenuItem Header="Developer's contacts" />
-                                <MenuItem Header="Tutorial" />
-                            </MenuItem>
-                        </Menu>
-                    </ToolBar>
-                    <WrapPanel
-                        Name="PlaginBar"
-                        Height="auto"
-                        Orientation="Horizontal">
-                        <Rectangle Width="50" Fill="Green" />
-                        <Rectangle
-                            Width="50"
-                            Height="50"
-                            Fill="Red" />
-                        <Rectangle
-                            Width="50"
-                            Height="50"
-                            Fill="Blue" />
-                        <Rectangle
-                            Width="50"
-                            Height="50"
-                            Fill="Yellow" />
-                    </WrapPanel>
+                    <views:Toolbar />
+                    <views:Plaginbar />
                 </StackPanel>
             </Border>
             <Border
@@ -93,7 +45,6 @@
                         Width="23"
                         Margin="0,0,0.4,0.8"
                         HorizontalAlignment="Right"
-                        Click="OnHideShowButtonClick"
                         Content=""
                         RenderTransformOrigin="0.526,0.5" />
                     <TabControl
@@ -124,60 +75,12 @@
                 BorderBrush="Black"
                 BorderThickness="1"
                 DockPanel.Dock="Right">
-                <StackPanel Name="Palette" Background="Azure">
-                    <Border BorderBrush="Black" BorderThickness="1">
-                        <StackPanel
-                            Width="150"
-                            Height="auto"
-                            HorizontalAlignment="Center">
-                            <TabControl Height="auto" VerticalAlignment="Top">
-                                <TabItem Header="All" />
-                                <TabItem Header="Nodes">
-                                    <ListBox
-                                        Margin="5"
-                                        ItemsSource="{Binding Nodes}"
-                                        SelectedItem="{Binding Mediator.Palette.SelectedElement}"
-                                        SelectionMode="Single">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding Name}" />
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                </TabItem>
-                                <TabItem Header="Edges">
-                                    <ListBox
-                                        Margin="5"
-                                        ItemsSource="{Binding Edges}"
-                                        SelectionMode="Single">
-                                        <ListBox.ItemTemplate>
-                                            <DataTemplate>
-                                                <TextBlock Text="{Binding}" />
-                                            </DataTemplate>
-                                        </ListBox.ItemTemplate>
-                                    </ListBox>
-                                </TabItem>
-                            </TabControl>
-                        </StackPanel>
-                    </Border>
-                    <Border
-                        Width="auto"
-                        Height="auto"
-                        BorderBrush="Black"
-                        BorderThickness="1"
-                        IsEnabled="False"
-                        Visibility="Hidden">
-                        <StackPanel>
-                            <TextBlock HorizontalAlignment="Center" FontSize="17">Properties</TextBlock>
-                        </StackPanel>
-                    </Border>
-                </StackPanel>
+                <views:Palette />
             </Border>
-            <Grid
-                Name="Scene"
-                Background="White"
-                DataContext=""
-                MouseLeftButtonDown="Scene_MouseLeftButtonDown" />
+            
+            <graphxctrl:ZoomControl x:Name="gg_zoomctrl">
+                <views:GraphAreaExample x:Name="gg_Area" />
+            </graphxctrl:ZoomControl>
         </DockPanel>
     </Grid>
 </Window>
