added console as user control

--- a/src/WPF_Editor/Views/Editor.xaml
+++ b/src/WPF_Editor/Views/Editor.xaml
@@ -17,9 +17,8 @@
     WindowState="Maximized"
     mc:Ignorable="d">
     <Window.Resources>
-        <converters:BoolToConsoleVisibiltyConverter x:Key="BoolToConsoleConverter" />
     </Window.Resources>
-    <Grid>
+    
         <DockPanel>
             <Border
                 BorderBrush="Black"
@@ -35,41 +34,7 @@
                 BorderBrush="Black"
                 BorderThickness="1"
                 DockPanel.Dock="Bottom">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <Button
-                        Grid.Row="0"
-                        Width="23"
-                        Margin="0,0,0.4,0.8"
-                        HorizontalAlignment="Right"
-                        Content=""
-                        RenderTransformOrigin="0.526,0.5" />
-                    <TabControl
-                        Grid.Row="1"
-                        Height="150"
-                        TabStripPlacement="Bottom"
-                        Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConverter}}">
-                        <TabItem Header="Messages">
-                            <ScrollViewer>
-                                <TextBox
-                                    IsReadOnly="True"
-                                    Text="{Binding MessageConsole, Mode=OneWay}"
-                                    TextWrapping="Wrap" />
-                            </ScrollViewer>
-                        </TabItem>
-                        <TabItem Header="Errors">
-                            <ScrollViewer>
-                                <TextBox
-                                    IsReadOnly="True"
-                                    Text="{Binding ErrorConsole, Mode=OneWay}"
-                                    TextWrapping="Wrap" />
-                            </ScrollViewer>
-                        </TabItem>
-                    </TabControl>
-                </Grid>
+                <views:Console />
             </Border>
             <Border
                 BorderBrush="Black"
@@ -82,5 +47,5 @@
                 <views:GraphAreaExample x:Name="gg_Area" />
             </graphxctrl:ZoomControl>
         </DockPanel>
-    </Grid>
+    
 </Window>
