--- a/src/WPF_Editor/Views/Console.xaml
+++ b/src/WPF_Editor/Views/Console.xaml
@@ -4,8 +4,46 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:WPF_Editor.Views"
-             mc:Ignorable="d" d:DesignWidth="300" Height="53.541">
+             xmlns:converters="clr-namespace:WPF_Editor.ViewModels.Converters"
+             mc:Ignorable="d" 
+             d:DesignWidth="300" 
+             d:DesignHeight="200">
+    <UserControl.Resources>
+        <converters:BoolToConsoleVisibiltyConverter x:Key="BoolToConsoleConverter"/>
+    </UserControl.Resources>
     <Grid>
-        
+        <Grid.RowDefinitions>
+                        <RowDefinition />
+                        <RowDefinition />
+                    </Grid.RowDefinitions>
+                    <Button
+                        Grid.Row="0"
+                        Width="23"
+                        Margin="0,0,0.4,0.8"
+                        HorizontalAlignment="Right"
+                        Content=""
+                        RenderTransformOrigin="0.526,0.5" Click="OnHideShowButtonClick" />
+        <TabControl
+                        Grid.Row="1"
+                        Height="150"
+                        TabStripPlacement="Bottom"
+                        Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConverter}}">
+            <TabItem Header="Messages">
+                            <ScrollViewer>
+                                <TextBox
+                                    IsReadOnly="True"
+                                    Text="{Binding MessageConsole, Mode=OneWay}"
+                                    TextWrapping="Wrap" />
+                            </ScrollViewer>
+                        </TabItem>
+                        <TabItem Header="Errors">
+                            <ScrollViewer>
+                                <TextBox
+                                    IsReadOnly="True"
+                                    Text="{Binding ErrorConsole, Mode=OneWay}"
+                                    TextWrapping="Wrap" />
+                            </ScrollViewer>
+                        </TabItem>
+                    </TabControl>
     </Grid>
 </UserControl>
