--- a/src/WPF_Editor/Views/Editor.xaml
+++ b/src/WPF_Editor/Views/Editor.xaml
@@ -3,12 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
-    xmlns:controls="clr-namespace:WPF_Editor.Views"
-    xmlns:converters="clr-namespace:WPF_Editor.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:graphx="http://schemas.panthernet.ru/graphx/"
-    xmlns:graphxctrl="clr-namespace:GraphX.Controls;assembly=GraphX.WPF.Controls"
-    xmlns:local="clr-namespace:WPF_Editor"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:views="clr-namespace:WPF_Editor.Views"
     Title="MainWindow"
@@ -16,9 +11,6 @@
     Height="720"
     WindowState="Maximized"
     mc:Ignorable="d">
-    <Window.Resources>
-        <converters:BoolToConsoleVisibiltyConverter x:Key="BoolToConsoleConverter" />
-    </Window.Resources>
     <Grid>
         <DockPanel>
             <Border
@@ -27,7 +19,7 @@
                 DockPanel.Dock="Top">
                 <StackPanel Name="TopPanel" Height="70">
                     <views:Toolbar />
-                    <views:Plaginbar />
+                    <views:Pluginbar />
                 </StackPanel>
             </Border>
             <Border
@@ -50,22 +42,15 @@
                     <TabControl
                         Grid.Row="1"
                         Height="150"
-                        TabStripPlacement="Bottom"
-                        Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConverter}}">
+                        TabStripPlacement="Bottom">
                         <TabItem Header="Messages">
                             <ScrollViewer>
-                                <TextBox
-                                    IsReadOnly="True"
-                                    Text="{Binding MessageConsole, Mode=OneWay}"
-                                    TextWrapping="Wrap" />
+                                <TextBox IsReadOnly="True" TextWrapping="Wrap" />
                             </ScrollViewer>
                         </TabItem>
                         <TabItem Header="Errors">
                             <ScrollViewer>
-                                <TextBox
-                                    IsReadOnly="True"
-                                    Text="{Binding ErrorConsole, Mode=OneWay}"
-                                    TextWrapping="Wrap" />
+                                <TextBox IsReadOnly="True" TextWrapping="Wrap" />
                             </ScrollViewer>
                         </TabItem>
                     </TabControl>
@@ -77,10 +62,7 @@
                 DockPanel.Dock="Right">
                 <views:Palette />
             </Border>
-            
-            <graphxctrl:ZoomControl x:Name="gg_zoomctrl">
-                <views:GraphAreaExample x:Name="gg_Area" />
-            </graphxctrl:ZoomControl>
+            <views:Scene/>
         </DockPanel>
     </Grid>
 </Window>
