--- a/src/WPF_Editor/Views/Pluginbar.xaml
+++ b/src/WPF_Editor/Views/Pluginbar.xaml
@@ -1,5 +1,5 @@
 ﻿<UserControl
-    x:Class="WPF_Editor.Views.Plaginbar"
+    x:Class="WPF_Editor.Views.Pluginbar"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
