names of model's elements now on screen

--- a/src/WPF_Editor/Views/Palette.xaml
+++ b/src/WPF_Editor/Views/Palette.xaml
@@ -36,7 +36,7 @@
                             SelectionMode="Single">
                             <ListBox.ItemTemplate>
                                 <DataTemplate>
-                                    <TextBlock Text="{Binding Name}" />
+                                    <TextBlock Text="{Binding}" />
                                 </DataTemplate>
                             </ListBox.ItemTemplate>
                         </ListBox>
