Added rounded-buttons for plugins. Some minor changes.

--- a/src/WPF_Editor/Views/Editor.xaml
+++ b/src/WPF_Editor/Views/Editor.xaml
@@ -16,7 +16,7 @@
                 BorderBrush="Black"
                 BorderThickness="1"
                 DockPanel.Dock="Top">
-                <StackPanel Name="TopPanel" Height="70">
+                <StackPanel Name="TopPanel" Height="Auto">
                     <views:Toolbar />
                     <views:Pluginbar />
                 </StackPanel>
