--- a/src/WPF_Editor/App.xaml
+++ b/src/WPF_Editor/App.xaml
@@ -3,6 +3,6 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="clr-namespace:WPF_Editor"
-    StartupUri="Views/Editor.xaml">
+    StartupUri="Views/EditorView.xaml">
     <Application.Resources />
 </Application>
