--- a/src/WPF_Editor/Views/ConsoleView.xaml
+++ b/src/WPF_Editor/Views/ConsoleView.xaml
@@ -1,15 +1,16 @@
-﻿<UserControl x:Class="WPF_Editor.Views.Console"
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:WPF_Editor.Views"
-             xmlns:converters="clr-namespace:WPF_Editor.ViewModels.Converters"
-             mc:Ignorable="d" 
-             d:DesignWidth="300" 
-             d:DesignHeight="200">
+﻿<UserControl
+    x:Class="WPF_Editor.Views.ConsoleView"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:converters="clr-namespace:WPF_Editor.ViewModels.Converters"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="clr-namespace:WPF_Editor.Views"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    d:DesignHeight="200"
+    d:DesignWidth="300"
+    mc:Ignorable="d">
     <UserControl.Resources>
-        <converters:BoolToConsoleVisibiltyConverter x:Key="BoolToConsoleConverter"/>
+        <converters:BoolToConsoleVisibiltyConverter x:Key="BoolToConsoleConverter" />
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
@@ -22,7 +23,7 @@
             Margin="0,0,0.4,0.8"
             HorizontalAlignment="Right"
             Content=""
-            RenderTransformOrigin="0.526,0.5" Click="OnHideShowButtonClick" />
+            RenderTransformOrigin="0.526,0.5" />
         <TabControl
             Grid.Row="1"
             Height="150"
