--- a/src/WPF_Editor/Views/ConsoleView.xaml
+++ b/src/WPF_Editor/Views/ConsoleView.xaml
@@ -2,16 +2,12 @@
     x:Class="WPF_Editor.Views.ConsoleView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:converters="clr-namespace:WPF_Editor.ViewModels.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:local="clr-namespace:WPF_Editor.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="200"
     d:DesignWidth="300"
     mc:Ignorable="d">
-    <UserControl.Resources>
-        <converters:BoolToConsoleVisibiltyConverter x:Key="BoolToConsoleConverter" />
-    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition />
@@ -27,22 +23,15 @@
         <TabControl
             Grid.Row="1"
             Height="150"
-            TabStripPlacement="Bottom"
-            Visibility="{Binding Path=ConsoleVisibility, Converter={StaticResource BoolToConsoleConverter}}">
+            TabStripPlacement="Bottom">
             <TabItem Header="Messages">
                 <ScrollViewer>
-                    <TextBox
-                        IsReadOnly="True"
-                        Text="{Binding MessageConsole, Mode=OneWay}"
-                        TextWrapping="Wrap" />
+                    <TextBox IsReadOnly="True" TextWrapping="Wrap" />
                 </ScrollViewer>
             </TabItem>
             <TabItem Header="Errors">
                 <ScrollViewer>
-                    <TextBox
-                        IsReadOnly="True"
-                        Text="{Binding ErrorConsole, Mode=OneWay}"
-                        TextWrapping="Wrap" />
+                    <TextBox IsReadOnly="True" TextWrapping="Wrap" />
                 </ScrollViewer>
             </TabItem>
         </TabControl>
