--- a/src/WPF_Editor/Views/PluginbarView.xaml
+++ b/src/WPF_Editor/Views/PluginbarView.xaml
@@ -15,15 +15,15 @@
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border CornerRadius="10" 
-                                Margin="3" 
-                                BorderThickness="1" 
-                                BorderBrush="Black" 
+                        <Border CornerRadius="10"
+                                Margin="3"
+                                BorderThickness="1"
+                                BorderBrush="Black"
                                 Background="LightGray">
-                            <ContentPresenter 
-                                VerticalAlignment="Center" 
-                                HorizontalAlignment="Center" 
-                                ContentSource="Content" 
+                            <ContentPresenter
+                                VerticalAlignment="Center"
+                                HorizontalAlignment="Center"
+                                ContentSource="Content"
                                 TextBlock.FontSize="13" />
                         </Border>
                     </ControlTemplate>
@@ -34,11 +34,9 @@
 
     <!-- Panel for plugin buttons -->
     <WrapPanel Height="auto" Orientation="Horizontal">
-        <Button Content="Plugin 1" Height="30" Width="70"></Button>
-        <Button Content="Plugin 2" Height="30" Width="70"></Button>
-        <Button Content="Plugin 3" Height="30" Width="70"></Button>
-        <Button Content="Plugin 4" Height="30" Width="70"></Button>
+        <Button Content="Plugin 1" Height="30" Width="70" />
+        <Button Content="Plugin 2" Height="30" Width="70" />
+        <Button Content="Plugin 3" Height="30" Width="70" />
+        <Button Content="Plugin 4" Height="30" Width="70" />
     </WrapPanel>
 </UserControl>
-    
-
