--- a/src/WPF_Editor/Views/PluginbarView.xaml
+++ b/src/WPF_Editor/Views/PluginbarView.xaml
@@ -1,28 +1,28 @@
 ﻿<UserControl
-    x:Class="WPF_Editor.Views.PluginbarView"
+    x:Class="WPF_Editor.Views.PluginBarView"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:local="clr-namespace:WPF_Editor.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     d:DesignHeight="300"
     d:DesignWidth="300"
     mc:Ignorable="d">
 
-    <!-- Style for buttons. Move to another file with styles if necessary. -->
+    <!--  Style for buttons. Move to another file with styles if necessary.  -->
     <UserControl.Resources>
         <Style TargetType="{x:Type Button}">
             <Setter Property="Template">
                 <Setter.Value>
                     <ControlTemplate TargetType="{x:Type Button}">
-                        <Border CornerRadius="10"
-                                Margin="3"
-                                BorderThickness="1"
-                                BorderBrush="Black"
-                                Background="LightGray">
+                        <Border
+                            Margin="3"
+                            Background="LightGray"
+                            BorderBrush="Black"
+                            BorderThickness="1"
+                            CornerRadius="10">
                             <ContentPresenter
-                                VerticalAlignment="Center"
                                 HorizontalAlignment="Center"
+                                VerticalAlignment="Center"
                                 ContentSource="Content"
                                 TextBlock.FontSize="13" />
                         </Border>
@@ -32,11 +32,23 @@
         </Style>
     </UserControl.Resources>
 
-    <!-- Panel for plugin buttons -->
+    <!--  Panel for plugin buttons  -->
     <WrapPanel Height="auto" Orientation="Horizontal">
-        <Button Content="Plugin 1" Height="30" Width="70" />
-        <Button Content="Plugin 2" Height="30" Width="70" />
-        <Button Content="Plugin 3" Height="30" Width="70" />
-        <Button Content="Plugin 4" Height="30" Width="70" />
+        <Button
+            Width="70"
+            Height="30"
+            Content="Plugin 1" />
+        <Button
+            Width="70"
+            Height="30"
+            Content="Plugin 2" />
+        <Button
+            Width="70"
+            Height="30"
+            Content="Plugin 3" />
+        <Button
+            Width="70"
+            Height="30"
+            Content="Plugin 4" />
     </WrapPanel>
 </UserControl>
