--- a/src/EditorPrototype/MainWindow.xaml
+++ b/src/EditorPrototype/MainWindow.xaml
@@ -76,6 +76,15 @@
                         <DataGridTextColumn Binding="{Binding Value}" Header="Value" />
                     </DataGrid.Columns>
                 </DataGrid>
+                
+                <Grid>
+                    <Button Content="Button"
+                            HorizontalAlignment="Left"
+                            Margin="10,10,0,0"
+                            VerticalAlignment="Top"
+                            Width="75"
+                            Click="ConstraintsButtonClick"/>
+                </Grid>
             </Grid>
         </DockPanel>
 
